--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,17 @@ body {
   background-size: cover;
 }
 
+.heading{
+  padding-left: 400px;
+  padding-right: 350px;
+  font-size: xx-large;
+  color:orange
+}
+
 /* style root div */
 #root{
   width: 80%;
-  border-right: 1px solid #323232;
-  border-left: 1px solid #323232;
+ 
 }
 
 /* style navbar component ---------------------------------*/
@@ -40,16 +46,17 @@ body {
   height: 100px;
   padding: 0px 20px;
   justify-content: space-between;
-  border-bottom: 1px solid #323232;
+  
 }
 .right-nav{
   display: flex;
   align-items: center;
 }
 .right-nav h5{
-  color: gray;
-  font-size: larger;
-  margin:450px 350px;
+  color: orangered;
+  font-size: x-large;
+  padding-left: 350px;
+  padding-right: 350px;
 }
 .addhabit-btn{
   cursor: pointer;
@@ -79,7 +86,7 @@ body {
 .habit{
   width: 100%;
   height: 100px;
-  border-bottom: 1px solid #323232;
+ 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -106,6 +113,7 @@ body {
 .habit-right{
   display: flex;
   align-items: center;
+  cursor:pointer;
 }
 .log-btn{
   text-decoration: none;
@@ -116,13 +124,14 @@ body {
   margin-right: 10px;
   color: white;
   border: none;
+  z-index: 5;
 }
 .log-btn:hover{
   color: gray;
   border:2px solid black;
 }
 .log-btn i{
-  margin-right: 5px;
+  margin-right: 10px;
 }
 .fa-trash{
   cursor: pointer;
@@ -145,15 +154,26 @@ body {
   background-color: orange;
   border-radius: 20px;
   padding: 5px;
+  position: relative;
 }
 p{
   margin: 0%;
 }
 .circle-icon{
   font-size: 24px;
-  margin: 5px 11px;
+  margin: 5px 5px;
   cursor: pointer;
+  
+  
 }
+
 .active{
   color: #0B5ED7 ;
+  
+}
+
+.cursor{
+  cursor:pointer;
+  position:relative;
+  z-index: 10;
 }
